recursion.lessons.recursion.spiral.Spiral.scala.error
Spiral:3: error: value !== is not a member of Int
if(steps!==0){
        ^Spiral:6: error: not found: value lenght
	spiral(steps-1, angle, lenght+increment, increment);
                               ^